# U-in-or-U-out

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCKER_SETUP.md  Dockerfile  README.md  USER_GUIDE.md  claude.md  docker-compose.yml  docker-quickstart.bat  docker-quickstart.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh
data/: README.md
data_alchemist/: __init__.py  __main__.py  cli.py
data_alchemist/converters/: __init__.py  csv_converter.py  json_converter.py
data_alchemist/core/: __init__.py  interfaces.py  models.py  plugin_manager.py
data_alchemist/detection/: __init__.py  detector.py  heuristics.py
data_alchemist/parsers/: __init__.py  csv_parser.py  image_parser.py  log_parser.py  wav_parser.py
data_alchemist/utils/: logging_config.py  validation.py
examples/: README.md  basic_conversion.py  batch_processing.py  custom_converter_example.py  custom_parser_example.py  programmatic_api_usage.py
tests/fixtures/: sample.csv  sample.tsv  sample_with_quotes.csv
tests/integration/: test_end_to_end.py
tests/unit/: test_converters.py  test_detection.py  test_error_handling.py  test_image_parser.py  test_models.py  test_parsers.py  test_plugin_manager.py  test_wav_parser.py
